Get mapping actually working.

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,6 +9,19 @@
     <canvas id="main" width="150" height="150">
       NodeVis Html Canvas Content
     </canvas>
+    <div>
+      <button onclick="draw()">Draw</button>
+      <div>
+        <p>a</p>
+        <label>x<input id="ax" type=number value="75"></label>
+        <label>y<input id="ay" type=number value="75"></label>
+      </div>
+      <div>
+        <p>b</p>
+        <label>x<input id="bx" type=number value="55"></label>
+        <label>y<input id="by" type=number value="55"></label>
+      </div>
+    </div>
   </body>
 </html>
 
